Implement scoreboard method variants and add missed tests